--- a/build.gradle
+++ b/build.gradle
@@ -54,7 +54,7 @@ dependencyRecommendations {
 }
 
 allprojects {
-  group = "org.apache.iceberg"
+  group = "com.tencent.bk.base.datahub"
   version = getProjectVersion()
   repositories {
     maven { url  "http://palantir.bintray.com/releases" }
