--- a/deploy.gradle
+++ b/deploy.gradle
@@ -77,10 +77,10 @@ subprojects {
           }
         }
 
-        groupId = 'org.apache.iceberg'
+        groupId = 'com.tencent.bk.base.datahub'
         pom {
           name = 'Apache Iceberg'
-          description = 'A table format for huge analytic datasets'
+          description = 'Apache Iceberg modified by Tencent blueking'
           url = 'https://iceberg.apache.org'
           licenses {
             license {
@@ -88,17 +88,18 @@ subprojects {
               url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
             }
           }
-          mailingLists {
-            mailingList {
-              name = 'Dev Mailing List'
-              post = 'dev@iceberg.apache.org'
-              subscribe = 'dev-subscribe@iceberg.apache.org'
-              unsubscribe = 'dev-unsubscribe@iceberg.apache.org'
+          developers {
+            developer {
+              id = 'bk-base'
+              name = 'bk-base'
+              email = 'contactus_bk@tencent.com'
+              roles = Arrays.asList("Manager")
             }
           }
-          issueManagement {
-            system = 'GitHub'
-            url = 'https://github.com/apache/iceberg/issues'
+          scm {
+            connection = 'scm:git:https://github.com/BKBASE-Plugin/iceberg.git'
+            developerConnection = 'scm:git:git@github.com:BKBASE-Plugin/iceberg.git'
+            url = 'https://github.com/BKBASE-Plugin/iceberg/tree/v0.9.0-bkbase.1'
           }
         }
       }
@@ -111,8 +112,8 @@ subprojects {
           password project.hasProperty('mavenPassword') ? "$mavenPassword" : ""
         }
         // upload to the releases repository using ./gradlew -Prelease publish
-        def snapshotsRepoUrl = 'https://repository.apache.org/content/repositories/snapshots'
-        def releasesRepoUrl = 'https://repository.apache.org/service/local/staging/deploy/maven2'
+        def snapshotsRepoUrl = project.hasProperty('snapshotsRepoUrl') ? "$snapshotsRepoUrl" : 'https://repository.apache.org/content/repositories/snapshots'
+        def releasesRepoUrl = project.hasProperty('releasesRepoUrl') ? "$releasesRepoUrl" : 'https://repository.apache.org/service/local/staging/deploy/maven2'
         url = project.hasProperty('release') ? releasesRepoUrl : snapshotsRepoUrl
       }
     }
@@ -120,7 +121,6 @@ subprojects {
 
   if (project.hasProperty('release')) {
     signing {
-      useGpgCmd()
       sign publishing.publications.apache
     }
   }
