--- a/deploy.gradle
+++ b/deploy.gradle
@@ -99,7 +99,7 @@ subprojects {
           scm {
             connection = 'scm:git:https://github.com/BKBASE-Plugin/iceberg.git'
             developerConnection = 'scm:git:git@github.com:BKBASE-Plugin/iceberg.git'
-            url = 'https://github.com/BKBASE-Plugin/iceberg/tree/v0.9.0-bkbase.1'
+            url = 'https://github.com/BKBASE-Plugin/iceberg/tree/master-bkbase'
           }
         }
       }
