--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ dependencyRecommendations {
 }
 
 allprojects {
-  group = "org.apache.iceberg"
+  group = "com.tencent.bk.base.datahub"
   version = getProjectVersion()
   repositories {
     mavenCentral()
